--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -16,6 +16,20 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    <com.android.settings.TitlePreference
+        android:key="language_title"
+        android:title="@string/settings_label"
+        settings:settingicon="@drawable/settings_icon" />
+    <com.android.settings.ChildTitlePreference
+        android:key="language_back"
+        android:title="@string/tts_default_lang_title"
+        settings:settingicon="@drawable/settings_back">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.Settings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen settings:height="30px" />
+
     <com.android.settings.MyIconPreferenceScreen
             android:key="phone_language"
             android:title="@string/phone_language">
