--- a/res/layout/master_clear_final.xml
+++ b/res/layout/master_clear_final.xml
@@ -22,6 +22,67 @@
         android:background="#fff"
         style="@style/info_layout">        
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60px"
+        android:layout_marginTop="0px"
+        android:orientation="horizontal">
+
+        <TextView android:id="@*android:id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0px"
+            android:layout_marginTop="0px"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/settings_title_bg"
+            android:paddingLeft="15px"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:text="@string/settings_label"
+            />
+        <ImageView android:id="@+id/image_battery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20px"
+            android:layout_marginRight="30px"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/battery4"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout android:id="@+id/relate_backsettings"
+        android:layout_width="match_parent"
+        android:layout_height="55px"
+        android:layout_marginTop="0px"
+        android:orientation="horizontal">
+
+        <ImageView android:id="@+id/image_backsettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5px"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:background="@drawable/settingback_button"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="bottom"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:ellipsize="marquee"
+            android:fadingEdge="horizontal"
+            android:text="@string/master_clear_title"
+            android:singleLine="true"
+            />
+    </RelativeLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
