--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -52,8 +52,8 @@
         <item name="android:paddingTop">10dip</item>
         <item name="android:paddingRight">10dip</item>
         <item name="android:paddingBottom">10dip</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="entry_layout">
@@ -88,6 +88,30 @@
 
     <style name="TallTitleBarTheme" parent="android:Theme.NoTitleBar">
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="sys_set_preacitivity">
+        <item name="android:windowBackground">@drawable/settings_bg</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:focusable">false</item>
+        <item name="android:cacheColorHint">#00000000</item>
+    </style>
+
+    <style name="child_set_preacitivity">
+        <item name="android:windowBackground">@drawable/settings_child_bg</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:focusable">false</item>
+        <item name="android:cacheColorHint">#00000000</item>
+    </style>
+
+    <style name="memory_set_preacitivity">
+        <item name="android:windowBackground">@drawable/settings_memory_bg</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:focusable">false</item>
+        <item name="android:cacheColorHint">#00000000</item>
     </style>
     
 </resources>
