--- a/res/xml/application_settings.xml
+++ b/res/xml/application_settings.xml
@@ -19,6 +19,19 @@
         android:title="@string/applications_settings_header"
         android:summary="@string/applications_settings_summary"
         android:key="applications_settings">
+    <com.android.settings.TitlePreference
+        settings:settingicon="@drawable/settings_icon"
+        android:key="application_title"
+        android:title="@string/settings_label" />
+    <com.android.settings.ChildTitlePreference
+        settings:settingicon="@drawable/settings_back"
+        android:key="application_back"
+        android:title="@string/applications_settings_header">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.Settings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen settings:height="30px" />
 
     <com.android.settings.MyCheckBoxPreference
             android:key="toggle_install_applications"
