--- a/res/xml/keyboard_settings.xml
+++ b/res/xml/keyboard_settings.xml
@@ -16,6 +16,19 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    <com.android.settings.TitlePreference
+        android:key="title"
+        android:title="@string/settings_label"
+        settings:settingicon="@drawable/settings_icon" />
+    <com.android.settings.ChildTitlePreference
+        android:key="memorysettings_back"
+        android:title="@string/storage_settings"
+        settings:settingicon="@drawable/settings_back">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.Settings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen android:key="space" settings:height="30px" />
 
     <com.android.settings.MyCheckBoxPreference
             android:key="auto_replace"
