--- a/res/xml/application_settings.xml
+++ b/res/xml/application_settings.xml
@@ -51,32 +51,8 @@
                 android:targetClass="com.android.settings.ManageApplications" />
     </PreferenceScreen>
 
-    <PreferenceScreen
-            android:title="@string/runningservices_settings_title"
-            android:summary="@string/runningservices_settings_summary">
-        <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.RunningServices" />
-    </PreferenceScreen>
-
-    <PreferenceScreen
-            android:title="@string/storageuse_settings_title"
-            android:summary="@string/storageuse_settings_summary">
-        <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.applications.StorageUse" />
-    </PreferenceScreen>
-
-    <PreferenceScreen
-            android:key="power_usage"
-            android:title="@string/power_usage_summary_title"
-            android:summary="@string/power_usage_summary">
-        <intent android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.fuelgauge.PowerUsageSummary" />
-    </PreferenceScreen>
-
     <PreferenceScreen 
+            android:key="development_setting"
             android:title="@string/development_settings_title" 
             android:summary="@string/development_settings_summary">
         <intent android:action="android.intent.action.MAIN"
