--- a/res/layout/master_clear_primary.xml
+++ b/res/layout/master_clear_primary.xml
@@ -19,11 +19,13 @@
 -->
 <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="#fff"
             style="@style/info_layout">
 
     <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="0dip"
+            android:layout_marginTop="30px"
             android:layout_weight="1">
         <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,13 +57,13 @@
                         android:layout_height="wrap_content"
                         android:paddingTop="12dp"
                         android:textSize="18sp"
-                        android:text="@string/erase_external_storage" />
+                        android:text="@string/nand_format" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="4sp"
                         android:textSize="14sp"
-                        android:text="@string/erase_external_storage_description" />
+                        android:text="@string/nand_format_summary" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -69,7 +71,8 @@
     <Button
             android:id="@+id/initiate_master_clear"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dip"
+            android:layout_marginTop="15dip"
+            android:layout_marginBottom="20dip"
             android:layout_width="150dip"
             android:layout_height="wrap_content"
             android:text="@string/master_clear_button_text"
