--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,6 +19,14 @@
 -->
 <resources>
 
+    <style name="master_dialog" parent="android:Theme.Dialog">
+        <item name="android:windowBackground">@drawable/alert_dialog_back_s</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
     <style name="info_label">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
