--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -40,12 +40,10 @@
     <item msgid="488968798204105119">"Zobrazují se všechny animace oken"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 sekund"</item>
-    <item msgid="8881760709354815449">"30 sekund"</item>
-    <item msgid="7589406073232279088">"1 minuta"</item>
-    <item msgid="7001195990902244174">"2 minuty"</item>
-    <item msgid="5721688686241190620">"10 minut"</item>
+    <item msgid="7001195990902244174">"5 minuty"</item>
+    <item msgid="5721688686241190620">"15 minut"</item>
     <item msgid="7156442995039264948">"30 min."</item>
+    <item>never sleep</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Velmi pomalá"</item>
