--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -40,12 +40,17 @@
     <item msgid="488968798204105119">"Плавные переходы при переключении между окнами"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 секунд"</item>
-    <item msgid="8881760709354815449">"30 секунд"</item>
-    <item msgid="7589406073232279088">"1 минута"</item>
-    <item msgid="7001195990902244174">"2 минуты"</item>
-    <item msgid="5721688686241190620">"10 минут"</item>
-    <item msgid="7156442995039264948">"30 минут"</item>
+    <item msgid="7001195990902244174">"5 мин."</item>
+    <item msgid="5721688686241190620">"15 мин."</item>
+    <item msgid="7156442995039264948">"30 мин."</item>
+    <item>Выкл.</item>
+  </string-array>
+  <string-array name="shutdown_timeout_entries">
+    <item>30 мин.</item>
+    <item>1 ч</item>
+    <item>1 ч 30 мин.</item>
+    <item>2 ч</item>
+    <item>Выкл.</item>
   </string-array>
   <string-array name="refresh_times_entries">
     <item>Каждую страницу</item>
