--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -40,12 +40,9 @@
     <item msgid="488968798204105119">"显示所有窗口动画"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 秒"</item>
-    <item msgid="8881760709354815449">"30 秒"</item>
-    <item msgid="7589406073232279088">"1 分钟"</item>
-    <item msgid="7001195990902244174">"2 分钟"</item>
-    <item msgid="5721688686241190620">"10 分钟"</item>
-    <item msgid="7156442995039264948">"30 分钟"</item>
+    <item>5 分钟</item>
+    <item>15 分钟</item>
+    <item>30 分钟</item>
   </string-array>
   <string-array name="hdmi_resolution_entries">
     <item>1920x1080p_50Hz</item>
