--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -18,11 +18,6 @@
         android:title="@string/display_settings"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-        <com.android.settings.BrightnessPreference
-                android:key="brightness"
-                android:title="@string/brightness"
-                android:dialogTitle="@string/brightness" />
-
         <ListPreference
                 android:key="screen_timeout"
                 android:title="@string/screen_timeout"
@@ -30,4 +25,12 @@
                 android:persistent="false"
                 android:entries="@array/screen_timeout_entries"
                 android:entryValues="@array/screen_timeout_values" />
+
+        <PreferenceScreen
+                android:title="@string/brightness">
+        <intent android:targetPackage="xrz.com.bl"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="xrz.com.bl.BackLightActivity" />
+        </PreferenceScreen>
+
 </PreferenceScreen>
