--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -47,6 +47,14 @@
     <item>30 Minuten</item>
     <item>Nie</item>
   </string-array>
+  <string-array name="auto_shutdown_timeout_entries">
+    <item>1 Stunde</item>
+    <item>2 Stunde</item>
+    <item>3 Stunde</item>
+    <item>4 Stunde</item>
+    <item>5 Stunde</item>
+    <item>Nie</item>
+  </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Sehr langsam"</item>
     <item msgid="2361722960903353554">"Langsam"</item>
