--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -47,6 +47,14 @@
     <item>30 minuto</item>
     <item>mai</item>
   </string-array>
+  <string-array name="auto_shutdown_timeout_entries">
+    <item>1 Ora</item>
+    <item>2 Ore</item>
+    <item>3 Ore</item>
+    <item>4 Ore</item>
+    <item>5 Ore</item>
+    <item>Mai</item>
+  </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Molto lenta"</item>
     <item msgid="2361722960903353554">"Lenta"</item>
