--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -40,12 +40,12 @@
     <item msgid="488968798204105119">"Alle Fensteranimationen werden angezeigt."</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 Sekunden"</item>
-    <item msgid="8881760709354815449">"30 Sekunden"</item>
-    <item msgid="7589406073232279088">"1 Minute"</item>
-    <item msgid="7001195990902244174">"2 Minuten"</item>
-    <item msgid="5721688686241190620">"10 Minuten"</item>
-    <item msgid="7156442995039264948">"30 Minuten"</item>
+    <item>1 Minute</item>
+    <item>2 Minuten</item>
+    <item>5 Minuten</item>
+    <item>10 Minuten</item>
+    <item>30 Minuten</item>
+    <item>Nie</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Sehr langsam"</item>
