--- a/res/values-es/arrays.xml
+++ b/res/values-es/arrays.xml
@@ -40,12 +40,12 @@
     <item msgid="488968798204105119">"Aparecen todas las animaciones de ventana."</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 segundos"</item>
-    <item msgid="8881760709354815449">"30 segundos"</item>
-    <item msgid="7589406073232279088">"1 minuto"</item>
-    <item msgid="7001195990902244174">"2 minutos"</item>
-    <item msgid="5721688686241190620">"10 minutos"</item>
-    <item msgid="7156442995039264948">"30 minutos"</item>
+    <item>1 minuto</item>
+    <item>2 minuto</item>
+    <item>5 minuto</item>
+    <item>10 minuto</item>
+    <item>30 minuto</item>
+    <item>nunca</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Muy lenta"</item>
