--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -40,12 +40,12 @@
     <item msgid="488968798204105119">"Toutes les animations sont affichées"</item>
   </string-array>
   <string-array name="screen_timeout_entries">
-    <item msgid="3342301044271143016">"15 secondes"</item>
-    <item msgid="8881760709354815449">"30 secondes"</item>
-    <item msgid="7589406073232279088">"1 minute"</item>
-    <item msgid="7001195990902244174">"2 minutes"</item>
-    <item msgid="5721688686241190620">"10 minutes"</item>
-    <item msgid="7156442995039264948">"30 minutes"</item>
+    <item>1 minute</item>
+    <item>2 minutes</item>
+    <item>5 minutes</item>
+    <item>10 minutes</item>
+    <item>30 minutes</item>
+    <item>jamais</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Très lente"</item>
