--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -425,4 +425,19 @@
         <item>silent</item>
         <item>notsilent</item>
     </string-array>
+
+    <string-array name="entries_font_size">
+        <item>Small</item>
+        <item>Normal</item>
+        <item>Large</item>
+        <item>Huge</item>
+    </string-array>
+
+    <string-array name="entryvalues_font_size" translatable="false">
+        <item>0.85</item>
+        <item>1.0</item>
+        <item>1.15</item>
+        <item>1.30</item>
+    </string-array>
+
 </resources>
