--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -178,4 +178,20 @@
     <item>" Левая верхняя -> Предыдущая страница \n Левая нижняя -> Следующая страница \n Правая верхняя -> Меню \n Правая нижняя -> Назад"</item>
     <item>" Левая верхняя -> Следующая страница \n Левая нижняя -> Предыдущая страница \n Правая верхняя -> Меню \n Правая нижняя -> Назад"</item>
   </string-array>
+  <string-array name="new_key_map_summary">
+    <item>"Верхняя левая -> Меню \nНижняя левая -> Назад \nВерхняя правая -> Предыдущая страница \nНижняя правая -> Следующая страница"</item>
+    <item>"Верхняя левая -> Меню \nНижняя левая -> Назад \nВерхняя правая -> Следующая страница \nНижняя правая -> Предыдущая страница"</item>
+    <item>"Верхняя левая -> Предыдущая страница \nНижняя левая -> Следующая страница \nВерхняя правая -> Меню \nНижняя правая -> Назад"</item>
+    <item>"Верхняя левая -> Следующая страница \nНижняя левая -> Предыдущая страница \nВерхняя правая -> Меню \nНижняя правая -> Назад"</item>
+    <item>"Верхняя левая -> Следующая страница \nНижняя левая -> Предыдущая страница \nВерхняя правая -> Следующая страница \nНижняя правая -> Предыдущая страница"</item>
+    <item>"Верхняя левая -> Предыдущая страница \nНижняя левая -> Следующая страница \nВерхняя правая -> Предыдущая страница \nНижняя правая -> Следующая страница"</item>
+    <item>"Верхняя левая -> Следующая страница \nНижняя левая -> Предыдущая страница \nВерхняя правая -> Предыдущая страница \nНижняя правая -> Следующая страница"</item>
+    <item>"Верхняя левая -> Предыдущая страница \nНижняя левая -> Следующая страница \nВерхняя правая -> Следующая страница \nНижняя правая -> Предыдущая страница"</item>
+  </string-array>
+  <string-array name="long_short_click_key_map_summary">
+    <item>"Левая кнопка (Короткое нажатие) -> Назад \nЛевая кнопка (Длинное нажатие) -> Меню \nПравая кнопка (Длинное нажатие) -> Предыдущая страница \nПравая кнопка (Короткое нажатие) -> Следующая страница"</item>
+    <item>"Левая кнопка (Короткое нажатие) -> Предыдущая страница \nЛевая кнопка (Длинное нажатие) -> Назад \nПравая кнопка (Длинное нажатие) -> Меню \nПравая кнопка (Короткое нажатие) -> Следующая страница"</item>
+    <item>"Левая кнопка (Короткое нажатие) -> Следующая страница \nЛевая кнопка (Длинное нажатие) -> Предыдущая страница \nПравая кнопка (Длинное нажатие) -> Меню \nПравая кнопка (Короткое нажатие) -> Назад"</item>
+    <item>"Левая кнопка (Короткое нажатие) -> Следующая страница \nЛевая кнопка (Длинное нажатие) -> Меню \nПравая кнопка (Длинное нажатие) -> Назад \nПравая кнопка (Короткое нажатие) -> Предыдущая страница"</item>
+  </string-array>
 </resources>
