--- a/res/xml/key_map_settings.xml
+++ b/res/xml/key_map_settings.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/key_keyboard">
+        android:title="@string/key_mapping">
 
     <com.android.settings.SummaryListPreference
         android:key="key_map_mode"
