--- a/res/layout-1024x758/dialog_brightness.xml
+++ b/res/layout-1024x758/dialog_brightness.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2006 The Android Open Source Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:layout_marginLeft="15dip"
+    android:layout_marginRight="15dip"
+    android:orientation="vertical"
+    android:gravity="center_vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -11,7 +28,7 @@
         android:layout_marginLeft="20dip"
         android:layout_marginTop="10dip"
         android:layout_marginBottom="10dip"
-        android:textSize="30sp"
+        android:textSize="22sp"
         android:text="@string/brightness"
         />
 
@@ -24,14 +41,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:layout_marginBottom="10dip"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        >
 
         <ToggleButton android:id="@+id/togglebutton_light_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
             android:layout_marginLeft="20dip"
             android:background="@drawable/togglebutton_light_background"
             android:focusable="false"
@@ -48,34 +65,40 @@
             />
 
         <ImageButton android:id="@+id/imagebutton_light_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dip"
-            android:layout_marginRight="21dip"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_gravity="center_vertical"
+            android:scaleType="fitCenter"
+            android:background="@drawable/focus_button_background"
             android:src="@drawable/light_down"
             android:contentDescription="@drawable/light_down"
-            android:background="@drawable/focus_button_background"
-            android:scaleType="fitCenter"
             />
 
         <RatingBar android:id="@+id/ratingbar_light_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/LightSettingsRatingBarStyle"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:paddingTop="10.0dip"
             android:numStars="50"
-            android:stepSize="1.0"
+            android:stepSize="1"
+            style="@style/LightSettingsRatingBarStyle"
             />
 
         <ImageButton android:id="@+id/imagebutton_light_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="21dip"
-            android:layout_marginRight="26dip"
-            android:src="@drawable/light_add"
-            android:contentDescription="@drawable/light_add"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/focus_button_background"
+            android:src="@drawable/light_add"
             android:scaleType="fitCenter"
+            android:contentDescription="@drawable/light_add"
             />
 
     </LinearLayout>
+
 </LinearLayout>
