--- a/res/layout-1024x758/installed_app_details.xml
+++ b/res/layout-1024x758/installed_app_details.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent">
     <LinearLayout android:id="@+id/all_details"
         android:orientation="vertical"
-        android:paddingRight="6dip"
         android:paddingBottom="5dip"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -130,6 +129,7 @@
                 layout="@layout/two_buttons_panel" />
         </LinearLayout>
         <RelativeLayout android:id="@+id/cache_panel"
+            android:layout_marginTop="6dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView android:id="@+id/cache_header"
@@ -171,11 +171,11 @@
             </LinearLayout>
             <Button
                android:id="@+id/clear_cache_button"
-               android:layout_width="150dip"
+               android:layout_width="200dip"
                android:layout_height="wrap_content"
-               android:paddingTop="18dip"
-               android:paddingBottom="18dip"
-               android:textSize="16dip"
+               android:paddingTop="15dip"
+               android:paddingBottom="15dip"
+               android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/clear_cache_btn_text"
                android:layout_below="@id/cache_size"
                android:layout_alignParentRight="true"
@@ -183,6 +183,7 @@
         </RelativeLayout>
         <TextView
             style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_marginTop="6dip"
             android:text="@string/auto_launch_label" />
         <RelativeLayout
             android:layout_width="match_parent"
@@ -195,16 +196,17 @@
                 android:paddingLeft="6dip"
                 android:paddingTop="6dip"
                 android:paddingRight="6dip"
-                android:textAppearance="?android:textAppearanceMedium" />
+                android:textAppearance="?android:textAppearanceLarge" />
             <Button android:id="@+id/clear_activities_button"
-                android:layout_width="150dip"
+                android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/auto_launch"
                 android:layout_alignParentRight="true"
                 android:layout_centerHorizontal="true"
-                android:paddingTop="18dip"
-                android:paddingBottom="18dip"
-                android:textSize="16dip"
+                android:paddingTop="15dip"
+                android:paddingBottom="15dip"
+                android:layout_marginTop="4dip"
+                android:textAppearance="?android:textAppearanceLarge"
                 android:text="@string/clear_activities" />
         </RelativeLayout>
         <LinearLayout android:id="@+id/permissions_section"
