--- a/res/layout-1024x758/master_clear_primary.xml
+++ b/res/layout-1024x758/master_clear_primary.xml
@@ -4,16 +4,16 @@
 **
 ** Copyright (C) 2008 The Android Open Source Project
 **
-** Licensed under the Apache License, Version 2.0 (the "License"); 
-** you may not use this file except in compliance with the License. 
-** You may obtain a copy of the License at 
+** Licensed under the Apache License, Version 2.0 (the "License");
+** you may not use this file except in compliance with the License.
+** You may obtain a copy of the License at
 **
-**     http://www.apache.org/licenses/LICENSE-2.0 
+**     http://www.apache.org/licenses/LICENSE-2.0
 **
-** Unless required by applicable law or agreed to in writing, software 
-** distributed under the License is distributed on an "AS IS" BASIS, 
-** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-** See the License for the specific language governing permissions and 
+** Unless required by applicable law or agreed to in writing, software
+** distributed under the License is distributed on an "AS IS" BASIS,
+** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+** See the License for the specific language governing permissions and
 ** limitations under the License.
 */
 -->
@@ -25,15 +25,22 @@
     <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="0dip"
+            android:layout_marginLeft="10dip"
             android:layout_weight="1">
         <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-            <TextView android:id="@+id/google_account"
+            <TextView
+                android:id="@+id/google_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="23sp"
+                android:textSize="20sp"
                 android:text="@string/master_clear_desc" />
+            <TextView android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="3dip"
+                android:layout_marginBottom="5dip"
+                android:background="#555555" />
             <LinearLayout android:id="@+id/erase_external_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -43,7 +50,7 @@
                 <CheckBox android:id="@+id/erase_external"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="top"
+                        android:layout_gravity="center_vertical"
                         android:paddingRight="8dp"
                         android:focusable="false"
                         android:clickable="false"
@@ -54,14 +61,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="12dp"
-                        android:textSize="23sp"
+                        android:paddingTop="2dp"
+                        android:textSize="20sp"
                         android:text="@string/erase_external_storage" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingTop="4sp"
-                        android:textSize="19sp"
+                        android:textSize="18sp"
                         android:text="@string/erase_external_storage_description" />
                 </LinearLayout>
             </LinearLayout>
