--- a/res/values-1024x758/dimens.xml
+++ b/res/values-1024x758/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="wifi_dialog_button_font_size">20sp</dimen>
+    <dimen name="settings_common_text_size">18sp</dimen>
+    <dimen name="button_min_height">50dip</dimen>
+    <dimen name="button_text_size">20sp</dimen>
     <dimen name="manage_app_tab_host_font_size">16sp</dimen>
-    <dimen name="alert_dialog_button_width">220dip</dimen>
+    <dimen name="alert_dialog_button_width">150dip</dimen>
 </resources>
