--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -108,6 +108,12 @@
                 android:title="@string/serialnumber"
                 android:summary="@string/device_info_default" />
 
+        <Preference android:key="wifi_mac_address"
+                style="?android:attr/preferenceInformationStyle"
+                android:title="@string/status_wifi_mac_address"
+                android:summary="@string/device_info_not_available"
+                android:persistent="false" />
+
         <!-- Device firmware version -->
         <Preference android:key="firmware_version" 
                 style="?android:preferenceInformationStyle"
