--- a/res/layout-1024x758/running_processes_item.xml
+++ b/res/layout-1024x758/running_processes_item.xml
@@ -14,6 +14,7 @@
         android:paddingRight="6dip"
         android:paddingBottom="7dip"
         android:orientation="horizontal"
+        android:background="#ffffffff"
         android:gravity="center_vertical">
         <ImageView android:id="@+id/icon"
             android:layout_width="@*android:dimen/app_icon_size"
@@ -43,7 +44,7 @@
                 <TextView android:id="@+id/size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|center"
+                    android:layout_gravity="center_vertical|right"
                     android:layout_weight="0.0"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:singleLine="true" />
@@ -56,7 +57,7 @@
                 <TextView android:id="@+id/description"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left|center"
+                    android:layout_gravity="center_vertical|left"
                     android:layout_weight="1.0"
                     android:paddingRight="4dip"
                     android:textAppearance="?android:textAppearanceMedium"
@@ -65,7 +66,7 @@
                 <TextView android:id="@+id/uptime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|center"
+                    android:layout_gravity="center_vertical|right"
                     android:layout_weight="0.0"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:singleLine="true" />
