--- a/res/values/strings2.xml
+++ b/res/values/strings2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<!-- Copyright (C) 2007 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,12 +14,7 @@
      limitations under the License.
 -->
 
-<resources>
-    <dimen name="vpn_connect_margin_right">10sp</dimen>
-    <dimen name="vpn_connect_normal_text_size">16sp</dimen>
-    <dimen name="vpn_connect_input_box_label_width">90sp</dimen>
-    <dimen name="wifi_dialog_button_font_size">24sp</dimen>
-    <dimen name="settings_common_text_size">18sp</dimen>
-    <dimen name="button_min_height">50dip</dimen>
-    <dimen name="button_text_size">20sp</dimen>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="serialnumber">Serial Number</string>
+    <string name="screen_resolution">Screen resolution</string>
 </resources>
