--- a/res/layout-1024x758/two_buttons_panel.xml
+++ b/res/layout-1024x758/two_buttons_panel.xml
@@ -13,9 +13,9 @@
         android:layout_gravity="left"
         android:layout_weight="0.4"
         android:paddingLeft="6dip"
-        android:paddingTop="18dip"
-        android:paddingBottom="18dip"
-        android:textSize="16dip" />
+        android:paddingTop="13dip"
+        android:paddingBottom="13dip"
+        android:textSize="18sp" />
     <View android:id="@+id/buttons_spacer_left"
         android:layout_width="0dip"
         android:layout_height="wrap_content"
@@ -24,11 +24,12 @@
     <Button android:id="@+id/right_button"
         android:layout_width="150dip"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="6dip"
         android:layout_gravity="right"
         android:layout_weight="0.4"
-        android:paddingTop="18dip"
+        android:paddingTop="13dip"
         android:paddingRight="6dip"
-        android:paddingBottom="18dip"
-        android:textSize="16dip"
+        android:paddingBottom="13dip"
+        android:textSize="18sp"
         android:text="@string/cancel" />
 </LinearLayout>
