--- a/res/values-800x600/styles.xml
+++ b/res/values-800x600/styles.xml
@@ -71,7 +71,7 @@
         <item name="android:textSize">21sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-    <style name="WindowTitle.Custom" parent="android:Theme.NoTitleBar">
+    <style name="WindowTitle.Custom" parent="android:WindowTitle">
         <item name="android:textAppearance">@style/TextAppearance.WindowTitle.Custom</item>
         <item name="android:paddingLeft">0dip</item>
         <item name="android:shadowColor">#00000000</item>
