--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -41,7 +41,7 @@
   </string-array>
   <string-array name="screen_timeout_entries">
     <item>"3 минуты"</item>
-    <item>"5 минуты"</item>
+    <item>"5 минут"</item>
     <item>"10 минут"</item>
     <item>"30 минут"</item>
     <item>Не включать спящий режим</item>
@@ -51,6 +51,12 @@
     <item>30 минут</item>
     <item>60 минут</item>
     <item>Не отключать</item>
+  </string-array>
+  <string-array name="power_off_timeout_values">
+    <item>1200000</item>
+    <item>1800000</item>
+    <item>3600000</item>
+    <item>-1</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Очень медленная"</item>
