--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -99,6 +99,7 @@
         <item>20 minute</item>
         <item>30 minutes</item>
         <item>60 minutes</item>
+        <item>one day</item>
         <item>never power off</item>
     </string-array>
 
@@ -106,6 +107,7 @@
         <item>1200000</item>
         <item>1800000</item>
         <item>3600000</item>
+        <item>86400000</item>
         <item>-1</item>
     </string-array>
 
