--- a/res/layout-1024x758/wifi_dialog.xml
+++ b/res/layout-1024x758/wifi_dialog.xml
@@ -10,10 +10,12 @@
         <LinearLayout android:id="@+id/info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
             android:orientation="vertical" />
         <LinearLayout android:id="@+id/type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
             android:orientation="vertical"
             android:visibility="gone">
             <TextView
@@ -21,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dip"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:text="@string/wifi_ssid" />
             <EditText android:id="@+id/ssid"
                 android:layout_width="match_parent"
@@ -34,7 +36,7 @@
                 android:layout_marginTop="8dip"
                 style="?android:attr/textAppearanceSmallInverse"
                 android:text="@string/wifi_security"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
             <Spinner android:id="@+id/security"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -44,6 +46,7 @@
         <LinearLayout android:id="@+id/fields"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
             android:orientation="vertical"
             android:visibility="gone">
             <LinearLayout android:id="@+id/eap"
@@ -56,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dip"
                     style="?android:attr/textAppearanceSmallInverse"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:text="@string/wifi_eap_method" />
                 <Spinner android:id="@+id/method"
                     android:layout_width="match_parent"
@@ -68,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dip"
                     style="?android:attr/textAppearanceSmallInverse"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:text="@string/please_select_phase2" />
                 <Spinner android:id="@+id/phase2"
                     android:layout_width="match_parent"
@@ -80,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dip"
                     style="?android:attr/textAppearanceSmallInverse"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:text="@string/wifi_eap_ca_cert" />
                 <Spinner android:id="@+id/ca_cert"
                     android:layout_width="match_parent"
@@ -91,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dip"
                     style="?android:attr/textAppearanceSmallInverse"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:text="@string/wifi_eap_user_cert" />
                 <Spinner android:id="@+id/user_cert"
                     android:layout_width="match_parent"
@@ -102,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dip"
                     style="?android:attr/textAppearanceSmallInverse"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:text="@string/wifi_eap_identity" />
                 <EditText android:id="@+id/identity"
                     android:layout_width="match_parent"
@@ -114,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dip"
                     style="?android:attr/textAppearanceSmallInverse"
-                    android:textSize="30sp"
+                    android:textSize="25sp"
                     android:text="@string/wifi_eap_anonymous" />
                 <EditText android:id="@+id/anonymous"
                     android:layout_width="match_parent"
@@ -126,14 +129,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dip"
-                style="?android:attr/textAppearanceSmallInverse"
                 android:textSize="25sp"
+                android:textColor="#000"
                 android:text="@string/wifi_password"
                 />
             <EditText android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
+                android:textSize="25sp"
                 android:password="true"
                 android:singleLine="true" />
             <LinearLayout
@@ -142,16 +145,16 @@
                 android:layout_marginTop="10dip"
                 android:orientation="horizontal">
                 <CheckBox android:id="@+id/show_password"
-                    android:layout_width="70dip"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/textAppearanceSmallInverse"
+                    android:layout_width="38dip"
+                    android:layout_height="38dip"
                     android:button="@drawable/btn_check"
                     android:textSize="25sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="?android:attr/textAppearanceSmallInverse"
+                    android:layout_marginLeft="10dip"
                     android:textSize="25sp"
+                    android:textColor="#000"
                     android:text="@string/wifi_show_password" />
             </LinearLayout>
         </LinearLayout>
