--- a/res/layout/wifi_dialog.xml
+++ b/res/layout/wifi_dialog.xml
@@ -159,6 +159,7 @@
                     android:text="@string/wifi_password" />
 
             <EditText android:id="@+id/password"
+                    android:imeOptions="actionDone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
