--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -204,6 +204,11 @@
         <item name="android:minHeight">@dimen/ratingbar_minHeight</item>
     </style>
 
+    <style name="StartupTutorialButton">
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">4dip</item>
+    </style>
+
     <style name="dialog_no_title" parent="@*android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
     </style>
