--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -42,7 +42,7 @@
     <!-- There is a setting to control the format of dates displayed throughout the system.  This is in the Date & Time Settings screen.  These will be adjusted to use punctuation appropriate to the user's locale. -->
     <string-array name="date_format_values" translatable="false">
         <!-- The blank item means to use whatever the locale calls for. -->
-        <item></item>
+        <item>yyyy-dd-MM</item>
         <item>MM-dd-yyyy</item>
         <item>dd-MM-yyyy</item>
         <item>yyyy-MM-dd</item>
@@ -50,31 +50,25 @@
 
     <!-- Display settings.  The delay in inactivity before the screen is turned off. These are shown in a list dialog. -->
     <string-array name="screen_timeout_entries">
-        <item>15 seconds</item>
-        <item>30 seconds</item>
-        <item>1 minute</item>
-        <item>2 minutes</item>
+        <item>3 minute</item>
         <item>5 minutes</item>
         <item>10 minutes</item>
         <item>30 minutes</item>
+        <item>never sleep</item>
     </string-array>
 
     <!-- Do not translate. -->
     <string-array name="screen_timeout_values" translatable="false">
         <!-- Do not translate. -->
-        <item>15000</item>
-        <!-- Do not translate. -->
-        <item>30000</item>
-        <!-- Do not translate. -->
-        <item>60000</item>
-        <!-- Do not translate. -->
-        <item>120000</item>
+        <item>180000</item>
         <!-- Do not translate. -->
         <item>300000</item>
         <!-- Do not translate. -->
         <item>600000</item>
         <!-- Do not translate. -->
         <item>1800000</item>
+        <!-- Do not translate. -->
+        <item>-1</item>
     </string-array>
     
     <!-- Display settings.  The delay in inactivity before the dream is shown. These are shown in a list dialog. -->
@@ -193,6 +187,59 @@
         <item>100</item>
         <item>120</item>
         <item>150</item>
+    </string-array>
+
+    <string-array name="power_off_timeout_entries">
+        <item>20 minutes</item>
+        <item>30 minutes</item>
+        <item>60 minutes</item>
+        <item>never power off</item>
+    </string-array>
+    <string-array name="power_off_timeout_values">
+        <item>1200000</item>
+        <item>1800000</item>
+        <item>3600000</item>
+        <item>-1</item>
+    </string-array>
+    <string-array name="network_inactivity_timeout_entries">
+        <item>5 minutes</item>
+        <item>10 minutes</item>
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>45 minutes</item>
+        <item>60 minutes</item>
+        <item>never</item>
+    </string-array>
+    <string-array name="network_inactivity_timeout_values">
+        <item>300000</item>
+        <item>600000</item>
+        <item>900000</item>
+        <item>1800000</item>
+        <item>2700000</item>
+        <item>3600000</item>
+        <item>-1</item>
+    </string-array>
+    <string-array name="screen_refresh_mode_entries">
+        <item>AUTO</item>
+        <item>A2</item>
+    </string-array>
+    <string-array name="screen_refresh_mode_values">
+        <item>0</item>
+        <item>2</item>
+    </string-array>
+    <string-array name="epd_full_timeout_entries">
+        <item>1 minute</item>
+        <item>2 minutes</item>
+        <item>10 minutes</item>
+        <item>30 minutes</item>
+        <item>never</item>
+    </string-array>
+    <string-array name="epd_full_timeout_values">
+        <item>60000</item>
+        <item>120000</item>
+        <item>600000</item>
+        <item>1800000</item>
+        <item>-1</item>
     </string-array>
 
     <!-- Do not translate. -->
